zecore_zeus_etl/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: zecore-zeus-etl
  namespace: zeus
spec:
  rules:
    - host: zecore-zeus-etl-development.zebrands.mx
      http:
        paths:
          - backend:
              service:
                name: zecore-zeus-etl
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
